[gd_scene load_steps=15 format=2]

[ext_resource path="res://entities/DroneSprite.gd" type="Script" id=1]
[ext_resource path="res://scripting/ScriptExecutor.gd" type="Script" id=2]
[ext_resource path="res://entities/Drone.gd" type="Script" id=3]
[ext_resource path="res://assets/characters/idle1.png" type="Texture" id=4]
[ext_resource path="res://assets/characters/idle2.png" type="Texture" id=5]
[ext_resource path="res://assets/theme/pixel_art.res" type="Theme" id=6]
[ext_resource path="res://assets/textures/frame.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/textures/speech_bubble.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/kongtext.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://entities/DroneCallbackAPI.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 6.1893
margin_right = 2.23868
margin_top = 2.107
margin_bottom = 5.1358

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 9 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9.40243, 9.63017 )

[node name="Drone" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="direction_indicator" type="Line2D" parent="."]
position = Vector2( 5.5, 6 )
points = PoolVector2Array( 0, 0, 0, -20 )
width = 1.0
default_color = Color( 0.984314, 0.94902, 0.211765, 1 )

[node name="SelectionBorder" type="Panel" parent="."]
margin_left = -3.5
margin_top = 0.499998
margin_right = 16.5
margin_bottom = 12.5
mouse_filter = 2
custom_styles/panel = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 5.93228, 1.29968 )
frames = SubResource( 1 )
script = ExtResource( 1 )

[node name="SpeechBubble" type="PanelContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -27.0
margin_right = 37.0
margin_bottom = -4.7572
size_flags_horizontal = 6
size_flags_vertical = 0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SpeechBubble"]
margin_left = 6.1893
margin_top = 2.107
margin_right = 22.7613
margin_bottom = 17.107
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "F"

[node name="CPU" type="Node" parent="."]
script = ExtResource( 2 )
object_callback_ref_path = NodePath("../CallbackAPI")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 1.5, -1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.5, -1.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 5.48269, 3.33072 )
shape = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="CallbackAPI" type="Node" parent="."]
script = ExtResource( 10 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
